# Game_of_Pig_Assessment_3

./: README.md  pyproject.toml  requirements.txt
Article/: README.md  metadata.yaml  yaml-to-bibtex.py
Code/: Pig_Figures.ipynb  Pig_example.ipynb  Piglet_example.ipynb  Running_demo.ipynb  analysis_helpers.py  pig.py  value_iteration.py
Code/.ipynb_checkpoints/: Pig_example-checkpoint.ipynb  analysis_helpers-checkpoint.py  value_iteration-checkpoint.py
examples/: Pig_example.ipynb  Piglet_example.ipynb  Running_demo.ipynb
experiments/pig_experiment/: Pig_Figures.ipynb  pig_full_policy.pkl  pig_vi.py
experiments/piglet_experiment/: Piglet_Figures.ipynb  piglet_result.pkl  piglet_vi.py
src/: README.md
src/optimal_pig/: Pig_example.ipynb  __init__.py  analysis_helpers.py  pig.py  piglet.py  value_iteration.py
test/: conftest.py  test_pig.py  test_piglet.py  test_value_iteration.py
