[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "optimal_pig"
version = "0.1.0"

authors = [
  { name="James Marriner"},
]
description = "Implements Value Iteration Algorithm for the Dice Game Pig"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
	"matplotlib",
	"numpy"
]

[project.urls]
homepage = "https://github.com/C-Rigby/Game_of_Pig_Assessment_3"
